feat: :sparkles: update paginator
