# src/routes/jobRouter.ts
@@ -1,9 +1,9 @@
 import { Router, Request, Response } from 'express';
 import {createJob,getAllJobs} from '../database/jobRepository'
 
-const routerJob = Router();
+export const jobRouter = Router();
 
-routerJob.post('', async (req:Request, res:Response) => {
+jobRouter.post('', async (req:Request, res:Response) => {
     try {
         const result = await createJob(req,res);
         return res.status(200).json(result);
@@ -12,7 +12,7 @@ routerJob.post('', async (req:Request, res:Response) => {
     }
 })
 
-routerJob.get('', async (req:Request, res:Response) => {
+jobRouter.get('', async (req:Request, res:Response) => {
     try {
         const result = await getAllJobs(req,res)
         return res.status(200).json(result)
@@ -20,5 +20,3 @@ routerJob.get('', async (req:Request, res:Response) => {
         return res.status(500)
     }
 })
-
-export default routerJob;
